Closes-Bug: #1648720 Set the overflow style to hidden for widget content area. So, for widgets which don't support dynamic resize like grid, content will not overflow the layout column/row boundaries and overlap on other widgets.

--- a/webroot/common/ui/scss/contrail.custom.scss
+++ b/webroot/common/ui/scss/contrail.custom.scss
@@ -1232,6 +1232,12 @@ button#close-error-popup{
     cursor: move;
 }
 
+.custom-grid-stack {
+    .custom-grid-stack-item {
+        overflow: hidden;
+    }
+}
+
 .custom-grid-stack .custom-grid-stack-item .item-content .nv-axislabel,
 .custom-grid-stack .custom-grid-stack-item .item-content .axis-label,
 .custom-grid-stack .custom-grid-stack-item .item-content .contrail-chart-title text {
